# otp-76

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Taskfile.yaml  package.json
src/: file.rs  main.rs  parsers.rs  utils.rs
src-tauri/: tauri.conf.json
src/commands/: cli.rs  create_pads.rs  generate_keypad.rs  mod.rs
src/otp/: pad.rs
