[package]
name = "otp76"
version = "0.1.0"
edition = "2021"
description = "OPT76"
authors = ["u8slvn <u8slvn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
